--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
     name: 'Deploy - Staging'
     runs-on: ubuntu-latest
     environment: staging
-    if: github.ref_name == 'refs/heads/"staging"'
+    if: ${{ github.ref_name == 'refs/heads/staging' }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -53,8 +53,8 @@ jobs:
   terraform-dev:
     name: 'Deploy - Dev'
     runs-on: ubuntu-latest
-    environment: staging
-    if: github.ref == 'refs/heads/"development"'
+    environment: dev
+    if: ${{ github.ref == 'refs/heads/development' }}
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
@@ -93,8 +93,8 @@ jobs:
   terraform-prd:
     name: 'Deploy - Prod'
     runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' }}
     environment: prd
-    if: github.ref == 'refs/heads/"main"'
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
