--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,6 +28,7 @@ jobs:
       environment: ${{ steps.env.outputs.environment }}
       
   terraform:
+    needs: [envs]
     name: 'Deploy - ${{ github.ref_name }}'
     runs-on: ubuntu-latest
     environment: ${{ steps.env.outputs.environment }}
