--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,9 +16,9 @@ jobs:
     - name: 'Define environment'
       id: env
       run: |
-        if [ "${{ github.ref_name == 'main' }} ]; then
+        if [ "${{ github.ref }}" = "refs/heads/main" ]; then
           echo "::set-output name=environment::prd"
-        elif [ "${{ github.ref_name == 'staging' }} ]; then
+        elif [ "${{ github.ref }}" = "refs/heads/staging" ]; then
           echo "::set-output name=environment::staging"
         else
           echo "::set-output name=environment::dev"
