--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,7 @@ jobs:
       
   terraform:
     needs: [envs]
-    name: 'Deploy - ${{ github.ref_name }}'
+    name: 'Deploy - ${{ needs.envs.outputs.environment }}'
     runs-on: ubuntu-latest
     environment: ${{ needs.envs.outputs.environment }}
   
