--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 0
       
-      - uses: action/setup-node@master
+      - uses: actions/setup-node@master
         with:
           node-version: '14.x'
 
